# Remotely.Click-for-Android-

./: README.md
mobile/: CMakeLists.txt  build.gradle  proguard-rules.pro
mobile/src/androidTest/java/click/remotely/android/: ExampleInstrumentedTest.java
mobile/src/main/: AndroidManifest.xml
mobile/src/main/cpp/: native-lib.c  native-lib.cpp
mobile/src/main/java/click/remotely/android/: AppCompatPreferenceActivity.java  DrawerActivity.java  MainActivity.java  MainActivity.kt  (+4 more)
mobile/src/main/res/color/: keyboard_button_text_color.xml
mobile/src/main/res/drawable/: gamepad_background.xml  gampad_stick_background.xml  ic_action_back.xml  ic_arrow_pointer_black_24dp.xml  ic_blank_black_slide_black_24dp.xml  ic_blank_white_slide_black_24dp.xml  ic_close_tab_black_24dp.xml  ic_close_window_black_24dp.xml  ic_console_black_24dp.xml  ic_delete_sweep_left_black_24dp.xml  ic_desktop_left_black_24dp.xml  ic_desktop_right_black_24dp.xml  ic_first_slide_black_24dp.xml  ic_force_quit_black_24dp.xml  ic_last_slide_black_24dp.xml  ic_logout_black_24dp.xml  ic_mouse_left_black_24dp.xml  ic_mouse_right_black_24dp.xml  ic_new_tab_black_24dp.xml  ic_next_slide_black_24dp.xml  ic_next_tab_black_24dp.xml  ic_numpad_black_24dp.xml  ic_pen_pointer_black_24dp.xml  ic_play_pause_black_24dp.xml  ic_player_volume_down_24dp.xml  ic_player_volume_mute_black_24dp.xml  ic_prev_slide_black_24dp.xml  ic_previous_tab_black_24dp.xml  ic_remote_devices_black_24dp.xml  ic_reopen_closed_tab_black_24dp.xml  ic_restart_black_24dp.xml  ic_security_black_24dp.xml  ic_show_desktop_black_24dp.xml  ic_sleep_black_24dp.xml  ic_source_code_black_24dp.xml  ic_switch_app_black_24dp.xml  ic_touchscreen_black_24dp.xml  ic_user_devices_black_24dp.xml  keyboard_button.xml  keyboard_button_disabled.xml  (+25 more)
mobile/src/main/res/drawable-v21/: left_mouse_button_background.xml  media_player_button.xml  right_mouse_button_background.xml  selectable_background.xml  shut_down_button.xml
mobile/src/main/res/layout/: activity_drawer.xml  activity_main.xml  activity_remote_devices.xml  app_bar_drawer.xml  bottom_sheet_keyboard.xml  dialog_fragment_user_device.xml  fragment_browser.xml  fragment_console.xml  fragment_gamepad.xml  fragment_keyboard.xml  fragment_media_player.xml  fragment_mouse.xml  fragment_numpad.xml  fragment_power_controls.xml  fragment_shortcuts.xml  fragment_slide_show.xml  fragment_touchpad.xml  recycler_item_remote_device.xml  recycler_item_undo.xml  start_nav_header_drawer.xml  toolbar.xml
mobile/src/main/res/layout-land/: dialog_fragment_user_device.xml  fragment_browser.xml  fragment_media_player.xml  fragment_numpad.xml  fragment_power_controls.xml  fragment_shortcuts.xml  fragment_slide_show.xml
mobile/src/main/res/menu/: dialog_user_device.xml  main_overflow.xml  start_nav_drawer.xml
mobile/src/main/res/values/: attrs.xml  colors.xml  dimen.xml  shiftable_keys_maps.xml  strings.xml  styles.xml
mobile/src/main/res/xml/: pref_general.xml  pref_headers.xml  pref_notification.xml  pref_security.xml
(+53 files in other folders)
